# crop-yield-prediction

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  app.py  docker-compose.yml  init_git.py  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
Catboost Model/: catboost_yield_model.cbm
RF_Model/: model_columns.pkl
docs/: PROJECT_STRUCTURE.md
rf_model/: Yield_Prediction_RF_Model.pkl
tests/: __init__.py  test_app.py
xgb_model/: scaler.pkl  xgb_model.pkl
